--- a/src/app/content/seattle/architects/firestationNo18.mdx
+++ b/src/app/content/seattle/architects/firestationNo18.mdx
@@ -19,13 +19,13 @@ Ballard wasn’t always part of Seattle - in its early days, it was an independe
 
 Incorporated in 1889, they had all the things that a town would need, including a post office, a city hall, a Carnegie Library, and a *wooden* fire station.
 
-But the new town was missing one critical piece -- access to freshwater. Sitting on the saltwater sound and with no fresh water sources nearby, Ballard relied on the city of Seattle to provide them with safe drinking water. And although it was the second-largest town in King County, in 1907, Ballard became a part of the larger town.
+But the new town was missing one critical piece -- access to fresh water. Sitting on the saltwater sound and with no fresh water sources nearby, Ballard relied on the city of Seattle to provide them with safe drinking water. And although it was the second-largest town in King County, in 1907, Ballard became a part of the larger town.
 
 <LOCItem image="/loc/seattle/firestationNo18/ballard.png" linkOut="https://www.loc.gov/resource/sn87093407/1907-02-06/ed-1/?sp=1&q=ballard+annexation&r=0.604,0.48,0.518,0.358,0" caption="Citizens of Ballard were not happy with the decision. On the day they merged, the flag was flown at half mast."/>
 
 In 1910, Seattle replaced the wooden firestation with the red brick building that still stands today. The architects for the new structure were Bebb & Mendel, who also designed the University Heights Elementary School and the Oriental Building in Downtown Seattle. Bebb later went on to design the Seattle Asian Art Museum (known at the time as the Art Institute of Seattle).
 
-At the time, fire-engines were powered by horses, so the area at the back of the station contained horse stalls.
+At the time, fire engines were powered by horses, so the area at the back of the station contained horse stalls.
 
 <LOCItem image="/loc/seattle/firestationNo18/firehorse.png" linkOut="https://www.loc.gov/resource/cph.3a27542/" caption="Horse-drawn fire engine rushing to a fire" alt="Photograph shows three white horses rushing down city street pulling a steam fire engine carrying three fire fighters"/>
 <ComicSection elements={[
