--- a/src/app/content/seattle/architects/somervellAndThomas.mdx
+++ b/src/app/content/seattle/architects/somervellAndThomas.mdx
@@ -15,9 +15,9 @@ blurb: "VVNTODO"
 stickers: [{image: "/loc/seattle/somervellAndThomas/smith.png", linkOut: "https://www.loc.gov/resource/g4284s.pm009770/?r=0.546,0.369,0.08,0.055,0", title: "Drawing of Smith Tower from a birdseye view map."},{image: "/loc/seattle/somervellAndThomas/smith.png", linkOut: "https://www.loc.gov/resource/g4284s.pm009770/?r=0.727,0.286,0.166,0.113,0", title: "Columbia label from birdseye view map"}]
 ---
 
-Carnegie libraries can be seen all around the world, and Seattle is no exception. In total, eight Carnegie libraries were built in the city -- and six of them still operate as branch libraries today.
+Carnegie libraries can be seen all around the world, and Seattle is no exception. In total, eight Carnegie libraries were built in the city. Six of them still operate as branch libraries today.
 
-The first Seattle Carnegie library was actually the Central Library. Established in 1890, the Seattle Public Library was pretty revolutionary. At that time, it was common to have closed stacks -- if a patron wanted to see a book, they would have to ask the librarian to fetch it for them. 
+The first Seattle Carnegie library was actually the original Central Library. Established in 1890, the Seattle Public Library was pretty revolutionary. At that time, it was common to have closed stacks -- if a patron wanted to see a book, they would have to ask the librarian to fetch it for them. 
 
 <ComicSection cols={5} rowHeight="3rem" elements={[
     {type:"image", src:"/loc/seattle/somervellAndThomas/line.png", position:{col:1, row:1}, size:{width:5, height:4}},
@@ -33,7 +33,7 @@ At the beginning of 1901, a huge fire consumed the wooden Yesler Mansion that th
 <LOCItem image="/loc/seattle/somervellAndThomas/libraryFire.png" linkOut="https://www.loc.gov/resource/sn87093407/1901-01-02/ed-1/?sp=1&q=library&r=-0.01,0.306,0.355,0.249,0" caption="The only books that survived were the ones that were checked out at the time of the fire - about 5,000." alt=""/>
 <LOCItem image="/loc/seattle/somervellAndThomas/newLibrary.png" linkOut="https://www.loc.gov/resource/sn87093407/1901-01-03/ed-1/?sp=1&q=library&r=-0.054,0.112,0.436,0.299,0" caption="But only a day later, people were hopeful - it seemed that the library had support to come back bigger than ever before." alt=""/>
 
-Four days after the fire, news broke that Andrew Carnegie, who before had written Seattle off as a “hot air boom town” whose bust was imminent, would donate $200,000 so that the city could build a new, “fireproof” library. The equivalent of $7.5 million dollars today, the city used this funding to purchase the whole city block between 4th and 5th avenue on Madison and Spring, which is the same location that the Central Library sits today.
+Four days after the fire, news broke that Andrew Carnegie, who before had written Seattle off as a “hot air boom town” whose bust was imminent, would donate $200,000 so that the city could build a new, “fireproof” library. The equivalent of $7.5 million dollars today, the city used this funding to purchase the whole city block between 4th and 5th avenue on Madison and Spring, which is the same location where the Central Library sits today.
 
 <LOCItem image="/loc/seattle/somervellAndThomas/seattleMap.png" linkOut="https://www.loc.gov/resource/g4284s.pm009770/?r=0.409,0.25,0.286,0.196,0" caption="" alt=""/>
 
@@ -47,7 +47,7 @@ Four days after the fire, news broke that Andrew Carnegie, who before had writte
     {type:"text", style:{outline:"box" , backgroundColor: "white", fontSize:"1rem"}, src:"Yeah, in 1998, Seattle voters voted in favor of the largest library bond initiative at the time, and funded almost $200 million in renovations for Seattle’s libraries. Of the eight Carnegie libraries built in Seattle, the Central Library is the only one that was demolished. The others, if not still operating as a library branch, are still standing.",position:{col:1, row:13}, size:{width:7, height:4}},
 ]}/> 
 
-After Carnegie’s first large donation, it seemed like a seal had broken. Carnegie also funded the building of the Ballard Library (which at time of creation was still a separate city from Seattle), West Seattle, Green Lake, and University branches. 
+After Carnegie’s first large donation, it seemed like a seal had broken. Carnegie also funded the building of the Ballard Library (which at time of creation was still a separate city from Seattle), and the West Seattle, Green Lake, and University branches. 
 
 And finally in 1911, Carnegie donated $70,000 more to fund the building of the last two Carnegie libraries: the Queen Anne Public Library and Columbia Branch which opened in 1915. Architect team W. Marbury Somervell and Harlan Thomas were hired to design both branches. 
 
