--- a/src/app/content/seattle/built/sinking-ship.mdx
+++ b/src/app/content/seattle/built/sinking-ship.mdx
@@ -41,9 +41,9 @@ Before this parking garage was built here, it was the site of three Seattle hote
 
 The Occidental II was burned down by the Great Seattle Fire, only 4 years after it had been built to replace the Occidental I.
 
-The Hotel Seattle, which was built to replace it, was also unlucky -- in 1949, when a huge earthquake shook Olympia, many buildings in Pioneer Square also got damaged. This led to the Hotel Seattle fall into disrepair, and it was the first building to get torn down in a larger plan to renovate Pioneer Square.
+The Hotel Seattle, which was built to replace it, was also unlucky. In 1949, when a huge earthquake shook Olympia, many buildings in Pioneer Square also were damaged. This led to the Hotel Seattle falling into disrepair, and it was the first building to be torn down as part of a larger plan to renovate Pioneer Square.
 
-If a building in Pioneer Square is still standing that was around for the 1949 earthquake, you can probably find signs of earthquake damage.
+If you see a building in Pioneer Square that was around for the 1949 earthquake, you can probably find signs of earthquake damage.
 
 <LOCItem linkOut="https://www.loc.gov/resource/mss11049.mss11049-001_00683_00886/?sp=159" alt="two page spread of a notebook with cursive" image="/loc/susan-journal.png" caption="Page from Susan B. Anthony's journal"/>
  
