--- a/src/app/content/seattle/built/tugboatFoss.mdx
+++ b/src/app/content/seattle/built/tugboatFoss.mdx
@@ -32,7 +32,7 @@ The (second) oldest fireboat:
     {type:"text", src:"And though it was constructed in 1889, it still, very impressively, floats (which is the first job of any boat)", position:{col:2, row:4},size:{width: 2, height: 1}, style:{outline: "box", backgroundColor:"white"}}
 ]}/>
 
-The *Arthur Foss* held many jobs. It started off in Astoria, Oregon, navigating the dangerous mouth of the Columbia River where it dumps into the Pacific Ocean. Dubbed the “graveyard of the Pacific”, the Arthur Foss, then known as Wallowa, would act as an experience guide and tow boats across the crossing.
+The *Arthur Foss* held many jobs. It started off in Astoria, Oregon, navigating the dangerous mouth of the Columbia River where it dumps into the Pacific Ocean. In the waters dubbed the “graveyard of the Pacific”, the Arthur Foss, then known as Wallowa, would act as an experienced guide and tow boats across the crossing.
 
 
 <LOCItem linkOut="https://www.loc.gov/resource/ppmsca.18165/" image="/loc/seattle/tugboatFoss/columbiaRiver.png" caption="The Columbia River"/>
@@ -47,7 +47,7 @@ The *Arthur Foss* held many jobs. It started off in Astoria, Oregon, navigating 
 {type:"text", src:"go get 'em!",position:{col:2, row:6}, size:{width:2, height:1}, style:{outline: "bubble", fontSize:"2rem",  textAlign: "center"}},
 
 ]}/>
-In 1929, the Foss Launch & Tug Company bought Wallowa and renamed it to Arthur Foss. To help the company pay for the cost of the vessel, they leased it out to feature as the titular boat in Tugboat Annie, the first major movie filmed in Washington State. 
+In 1929, the Foss Launch & Tug Company bought Wallowa and renamed it Arthur Foss. To help the company pay for the cost of the vessel, they leased it out to feature as the titular boat in Tugboat Annie, the first major movie filmed in Washington State. 
 
 <ComicSection elements={[
     {type:"text", src:"You're gonna be a star, kid! Gimme your best movie star smile", position:{col: 1, row: 1}, size: {width:2, height: 1}, style:{outline: "bubble",}, },
