--- a/src/app/content/seattle/names/aliceBall.mdx
+++ b/src/app/content/seattle/names/aliceBall.mdx
@@ -27,7 +27,7 @@ This photo was taken by John Presley Bell, and was produced via daguerreotype, w
 
 Alice Ball was born in 1892 in Seattle, WA into a family of photographers - John Presley Ball was her grandfather - and, perhaps inspired by the photography process, she studied chemistry at the University of Washington.
 
-She then got her master’s in chemistry at the University of Hawai’i, where her thesis explored the chemical makeup of a plant that could be used to treat many illnesses, from anxiety to kidney disorders. She was both the first woman and the first African American person to get a master’s from UH.
+She then got her master’s in chemistry at the University of Hawai’i, where her thesis explored the chemical makeup of a plant that could be used to treat many illnesses, from anxiety to kidney disorders. She was both the first woman and the first African American to get a master’s from UH.
 
 <ComicSection cols={5} rowHeight="2rem" elements={[
     {type:"text", src:"When I saw Alice Ball’s work, I thought she’d be the perfect person to work on researching chaulmoogra oil, which also was extracted from a plant.",style:{outline: "bubble"}, position:{col:1, row:1}, size:{width:5, height:3}},
@@ -50,7 +50,7 @@ She then got her master’s in chemistry at the University of Hawai’i, where h
 ]}/> 
 So even though there had a medicine to treat leprosy for centuries, there was no way to give it to patients. But Alice Ball, at age 23, developed a chemical method so that the water insoluble acid could be suspended in water and injected comfortably.
 
-When she died less than a year later at the age of 24, the dean of medicine (also named Arthur Dean) at the university took over her research and eventually publishing it as the “Dean method”.
+When she died less than a year later at the age of 24, the dean of medicine (coincidentally named Arthur Dean) at the university took over her research and eventually published it as the “Dean method”.
 
 <ComicSection cols={4} elements={[
     {type:"text", style:{outline: "bubble"},position:{col:1, row:1}, size:{width:3, height:1},src:"Sure, sure, Alice did some work, but I improved it so much that we should really call it the Dean method."},
@@ -62,7 +62,7 @@ When she died less than a year later at the age of 24, the dean of medicine (als
 ]}/> 
 Despite Hollmann’s best efforts, it was still considered the “Dean method” until the 1970s, when two professors at the University of Hawai’i rediscovered the story of Ball’s work.
 
-The Ball Method was the only way to treat leprosy until antibiotics were popularized in the 1940s, and Alice Ball park celebrates her nearly forgotten legacy as a professor and pioneering scientist.
+The Ball Method was the only way to treat leprosy until antibiotics were popularized in the 1940s, and Alice Ball Park celebrates her nearly forgotten legacy as a professor and pioneering scientist.
 {/* <ComicSection elements={[
     {type:"image", src:"", position:{col:1, row:1}, size:{width:1, height:1}},
     {type:"text", src:"", position:{col:1, row:1}, size:{width:1, height:1}, style:{outline: "bubble"}, bubbleStyle: {tailDegree: 0}},
