--- a/src/app/content/seattle/names/denny-regrade.mdx
+++ b/src/app/content/seattle/names/denny-regrade.mdx
@@ -15,7 +15,7 @@ stickers: [{image: "/loc/cutting-hill.jpg", linkOut: "https://www.loc.gov/item/2
 
 # The Denny Regrades
 
-When Arthur Denny lived in Seattle, he lived on a hill named after himself -- Denny Hill. 
+When Arthur Denny lived in Seattle, he lived on a hill named after him -- Denny Hill. 
 <ComicSection elements={[
     {type:"image", src:"/comics/denny-regrade/citizen-1.png", position:{col:1, row:1}, size:{width:1, height:1}},
     {type:"text", src:"You must be mistaken. Seattle doesn't have a *Denny Hill.*", position:{col:2, row:1}, size:{width:2, height:1}, style:{outline: "bubble"}, bubbleStyle: {tailDegree: 180}},
