--- a/src/app/content/seattle/olmsted/ravenna.mdx
+++ b/src/app/content/seattle/olmsted/ravenna.mdx
@@ -21,7 +21,7 @@ Ravenna Park was notable for two things:
 - Its deep ravine, which was formed by the Vashon Glacier and was fed by other lakes that were glacier carved as well, including Bitter Lake, Green Lake, and Haller Lake.
 - Its large, large, LARGE trees, who avoided being cut down by loggers.
 
-John Charles Olmsted recommended that Ravenna Park be bought by the city because of these two reasons, and stated that the forest was better preserved than any other portion of the city. 
+John Charles Olmsted recommended that Ravenna Park be bought by the city for these two reasons, and stated that the forest was better preserved than any other portion of the city. 
 
 <Comic image="/comics/ravenna-tree/ravennaTree2.png" caption="Louise Beck" position="right" size="L" speechBubbles={[{text:"These trees are beautiful giants who deserve beautiful names. "},{text:"I’ll name this one Paderewski, because I think these royal trees would certainly appreciate classical music."}, {text:" Plus Jan Paderewski is going to play a recital in Seattle next week. "}]}/>
 
