--- a/src/app/content/seattle/built/montlakeBridge.mdx
+++ b/src/app/content/seattle/built/montlakeBridge.mdx
@@ -21,11 +21,9 @@ There were five different paths considered --
 
 <LOCItem image="/loc/seattle/montlakeBridge/canalRoutes.png" linkOut="https://www.loc.gov/resource/gdcmassbookdig.historyadvantage00seat/?sp=33&q=seattle+canal&r=-0.288,0.48,1.732,1.187,0"/>
 
-Routes 1 and 2 would have cut through what is present day downtown Seattle, and it was concluded that this land was too in demand to cut away. The route that was eventually chosen was the North Canal cut from Shilshole Bay, despite being the longest at 16.9 miles.
+Routes 1 and 2 would have cut through what is present day downtown Seattle, and it was concluded that this land was too in-demand to cut away. The route that was eventually chosen was the North Canal cut from Shilshole Bay, despite being the longest at 16.9 miles.
 
-With a new waterway, there was also a new problem - the city was now divided in half. It was decided that along with carving out the canal and building the locks, four drawbridges should also be constructed to keep the city tied together.
-
-The Ballard Bridge, Fremont Bridge, University Bridge, and Montlake Bridge.
+With a new waterway, there was also a new problem - the city was now divided in half. It was decided that along with carving out the canal and building the locks, four drawbridges should also be constructed to keep the city tied together: the Ballard Bridge, Fremont Bridge, University Bridge, and Montlake Bridge.
 
 
 <ComicSection rowHeight="3rem" elements={[
@@ -46,9 +44,9 @@ They were inspired by similar bridges in Chicago, designed to cross the Chicago 
 
 <LOCItem image="/loc/seattle/montlakeBridge/chicagoBridge.png" linkOut="https://www.loc.gov/resource/stereo.1s12313/" caption="Michigan Avenue Bridge over Chicago River" alt="stereograph of bridge opening up for a boat to pass under"/>
 
-The first bascule bridge that was completed was the Fremont Bridge in 1917, and an article about it was published in Engineering News-Record. Folks at the Strauss Bascule Bridge Company, the firm that had established the creation of the trunnion bascule bridge design, saw the article, and in 1920, they sued the city of Seattle for $348,000.
+The first bascule bridge that was completed was the Fremont Bridge in 1917, and an article about it was published in Engineering News-Record. Folks at the Strauss Bascule Bridge Company, the firm that had created the trunnion bascule bridge design, saw the article, and in 1920, they sued the city of Seattle for $348,000.
 
-The Montlake Bridge was vastly delayed, being the last of the four bridges to be constructed, the city revised its plans to avoid further litigation. 
+The Montlake Bridge was vastly delayed, being the last of the four bridges to be constructed, as the city revised its plans to avoid further litigation. 
 
 <ComicSection elements={[
     {type:"image", src:"/loc/seattle/montlakeBridge/protestors.png", position:{col:1, row:1}, size:{width:3, height:4}},
@@ -56,9 +54,9 @@ The Montlake Bridge was vastly delayed, being the last of the four bridges to be
 ]}/>
 
 
-Thus, of all the bascule bridges in the entire city of Seattle, the Montlake Bridge is unique in that the trunnions, the pivot points on which the roads of the bridge turn, sit on top of concrete blocks.
+Thus, of all the bascule bridges in the entire city of Seattle, the Montlake Bridge is unique in that the trunnions, the pivot points on which the roads of the bridge turn, sit on top of concrete blocks instead of on steel cross girders. This change was meant to make the bridge different enough from the Strauss design that Strauss wouldn't sue again (they did anyway, in 1925, though they were unable to stop construction).
 
-If you want to learn more about the bridge's history and how it works, you can read the full engineering report here, which states: “Only in American could football become a justification for building a bridge.”
+If you want to learn more about the bridge's history and how it works, you can read the full engineering report here, which states: “Only in America could football become a justification for building a bridge.”
 
 <BigLink link="https://tile.loc.gov/storage-services/master/pnp/habshaer/wa/wa0400/wa0441/data/wa0441data.pdf" thumbnail="/placeholderThumbnail.png" title="Montlake Bridge HAER Report"/>
 
