--- a/src/app/content/seattle/architects/firestationNo18.mdx
+++ b/src/app/content/seattle/architects/firestationNo18.mdx
@@ -17,11 +17,7 @@ stickers: []
 
 Ballard wasn’t always part of Seattle - in its early days, it was an independent town.
 
-Incorporated in 1889, they had all the things that a town would need, including:
-Post office
-City hall
-Carnegie Library
-Wooden fire station
+Incorporated in 1889, they had all the things that a town would need, including a post office, a city hall, a Carnegie Library, and a *wooden* fire station.
 
 But the new town was missing one critical piece -- access to freshwater. Sitting on the saltwater sound and with no fresh water sources nearby, Ballard relied on the city of Seattle to provide them with safe drinking water. And although it was the second-largest town in King County, in 1907, Ballard became a part of the larger town.
 
@@ -33,12 +29,21 @@ At the time, fire-engines were powered by horses, so the area at the back of the
 
 <LOCItem image="/loc/seattle/firestationNo18/firehorse.png" linkOut="https://www.loc.gov/resource/cph.3a27542/" caption="Horse-drawn fire engine rushing to a fire" alt="Photograph shows three white horses rushing down city street pulling a steam fire engine carrying three fire fighters"/>
 <ComicSection elements={[
-    {type:"image", src:"/placeholderThumbnail.png", position:{col:1, row:1}, size:{width:1, height:1}},]}/>
+    {type:"image", src:"/loc/seattle/firestationNo18/station.png", position:{col:1, row:1}, size:{width:3, height:3}},
+    {type:"text", style:{outline:"box", backgroundColor:"white", fontSize:"1rem"}, src:"The front the station has four bay doors.", position:{col:1, row:1}, size:{width:3, height:1}},
+    {type:"text", style:{outline:"box", backgroundColor:"white", fontSize:"2rem"}, src:"Perfect for a team of horses on their way to work!", position:{col:1, row:5}, size:{width:3, height:1}},
+    {type:"image", src:"/loc/seattle/firestationNo18/horses.png", position:{col:1, row:4}, size:{width:3, height:7}},
+    ]}/>
 
 At times, extra support was needed to handle some fires. In 1958, the Seattle Cedar Mill had a catastrophic fire. Located right next to the Ballard Bridge on the Lake Washington Ship Canal, the mill would process logs into boards, and then store them to have them dry for months before being sold.
 
-<ComicSection elements={[
-    {type:"image", src:"/placeholderThumbnail.png", position:{col:1, row:1}, size:{width:1, height:1}},
+<ComicSection cols={5} elements={[
+    {type:"text", style:{outline:"bubble"}, src:"Those stacks of wood are over 50 feet high!", position:{col:2, row:1}, size:{width:2, height:1}},
+    {type:"text", style:{outline:"bubble"}, src:"It’d be really bad if a fire started here... all of the wood is so.... flammable.", position:{col:3, row:2}, size:{width:3, height:1}},
+     {type:"image", src:"/loc/seattle/firestationNo18/mill.png", position:{col:1, row:2}, size:{width:5, height:5}},
+     {type:"image", src:"/loc/seattle/firestationNo18/concernHorse.png", position:{col:4, row:4}, size:{width:2, height:2}},
+    {type:"text", style:{outline:"bubble"}, src:"It probably would take at least 3 days to put out...", position:{col:1, row:5}, size:{width:2, height:1}},
+    {type:"text", style:{outline:"bubble"}, src:"And require a fireboat....", position:{col:3, row:6}, size:{width:1, height:1}},
 ]}/>
 
 Luckily, Seattle had the Fireboat Duwamish as part of its firefighting fleet. It arrived on site from its home at Fire Station 5, located north of Colman Dock in downtown, and fought the fire from the canal.
