arai and firestation

--- a/src/app/content/seattle/architects/arai.mdx
+++ b/src/app/content/seattle/architects/arai.mdx
@@ -1,5 +1,5 @@
 ---
-title:
+title: Kichio Allen Arai
 locationTitle: Seattle Betsuin Buddhist Temple
 address: 1427 South Main St, Seattle, WA 98144
 location: ["Seattle"] 
@@ -23,19 +23,26 @@ His family moved to Seattle when he was 10 years old, and he graduated from Broa
 <LOCItem image="/loc/seattle/arai/nisei.png" linkOut="https://www.loc.gov/resource/sn86071999/1949-05-11/ed-1/?sp=3&q=broadway+playfield&r=0.26,0.3,0.511,0.35,0" caption="By the 1920s and beyond, second generation Japanese Americans (Nisei) had started to form teams. Serving as a space for young Japanese Americans to build social bonds and explore their newly combined cultural identities, numerous baseball teams were founded, including the Asahi Club and Cherry baseball team." alt=""/>
 
 Arai’s structures in Seattle are very recognizable:
-<ComicSection elements={[
-    {type:"image", src:"/placeholderThumbnail.png", position:{col:1, row:1}, size:{width:1, height:1}},]}/>
-
-He created current building for the Seattle Betsuin Buddhist Temple, after the first one designed by Saunders & Lawton was torn down.
-He also created the first Torii gate that was gifted to Seward Park in 1934 after being created for the Seattle Potlatch Festival. In the 1980s, the torii was removed because of decomposition, but a new gate was installed in 2022.
+<ComicSection rowHeight="2rem" elements={[
+    {type:"text", style:{outline:"box", backgroundColor: "white"}, src:"Like the torii in Seward Park, which was created for the Potlatch Festival held in University District and then gifted to the park afterwards.",position:{col:1, row:1}, size:{width:3, height:3}},
+    {type:"image", src:"/loc/seattle/arai/gate.png", position:{col:1, row:2}, size:{width:3, height:6}},
+    {type:"text", style:{outline:"box", backgroundColor: "white"}, src:"He also created the current building for the Seattle Betsuin Buddhist Temple, after the first one designed by Saunders & Lawton was torn down.",position:{col:1, row:11}, size:{width:3, height:3}},
+    {type:"image", src:"/loc/seattle/arai/temple.png", position:{col:1, row:12}, size:{width:3, height:8}}]}/>
 
 One of his other original structures remains standing, not very far from the temple! In 1934, he designed the permanent home for the Seattle Dojo, which is the oldest judo dojo in the contiguous United States.
 
 Before they had a building, Seattle Dojo would operate out of basements throughout Japantown. 
 
 
-<ComicSection elements={[
-    {type:"image", src:"/placeholderThumbnail.png", position:{col:1, row:1}, size:{width:1, height:1}},]}/>
+<ComicSection rowHeight="2rem" cols={7} elements={[
+    {type:"image", src:"/loc/seattle/arai/dojo.png", position:{col:1, row:2}, size:{width:7, height:8}},
+    {type:"text", style:{outline:"bubble"}, src:"From the outside, it looks like a simple, white building",position:{col:2, row:1}, size:{width:3, height:3}},
+    {type:"image", src:"/loc/seattle/arai/kenjiYamada.png", position:{col:4, row:9}, size:{width:3, height:4}},
+    {type:"text", style:{outline:"none", backgroundColor: "white"}, src:"Kenji Yamada, 1954 and 1955 National Judo champion, member of Seattle Dojo",position:{col:5, row:13}, size:{width:3, height:3}},
+    {type:"text", style:{outline:"bubble"}, src:"But the floor is specially designed for judo!",position:{col:1, row:10}, size:{width:3, height:3}},
+    {type:"image", src:"/loc/seattle/arai/springs.png", position:{col:1, row:14}, size:{width:7, height:8}},
+    {type:"text", style:{outline:"box", backgroundColor: "white", fontSize: "1rem"}, src:"The entire floor was mounted on truck springs to give it extra bounce.",position:{col:1, row:20}, size:{width:7, height:1}},
+    ]}/>
 
 Even though it’s been well over 50 years, Arai’s work has endured -- The Seattle Dojo is still in use as a judo dojo, and the Seattle Betsuin Buddhist Temple is still an active Buddhist church.
 
