--- a/src/app/content/seattle/architects/somervellAndThomas.mdx
+++ b/src/app/content/seattle/architects/somervellAndThomas.mdx
@@ -1,5 +1,5 @@
 ---
-title:
+title: Seattle's smallest library
 locationTitle: Columbia Branch Library
 address: 4721 Rainier Ave S, Seattle, WA 98118
 location: ["Seattle"] 
@@ -19,9 +19,13 @@ Carnegie libraries can be seen all around the world, and Seattle is no exception
 
 The first Seattle Carnegie library was actually the Central Library. Established in 1890, the Seattle Public Library was pretty revolutionary. At that time, it was common to have closed stacks -- if a patron wanted to see a book, they would have to ask the librarian to fetch it for them. 
 
-<ComicSection elements={[
-    {type:"image", src:"/placeholderThumbnail.png", position:{col:1, row:1}, size:{width:1, height:1}},
-
+<ComicSection cols={5} rowHeight="3rem" elements={[
+    {type:"image", src:"/loc/seattle/somervellAndThomas/line.png", position:{col:1, row:1}, size:{width:5, height:4}},
+    {type:"text", style:{outline:"bubble"}, src:"As you can imagine, this doesn't scale very well.",position:{col:1, row:6}, size:{width:3, height:3}},
+    {type:"image", src:"/loc/seattle/somervellAndThomas/talking.png", position:{col:1, row:9}, size:{width:5, height:6}},
+    {type:"text", style:{outline:"bubble"}, src:"So we were the first library on the West Coast to open up our book stacks for people to just browse!",position:{col:3, row:13}, size:{width:3, height:3}},
+    {type:"image", src:"/loc/seattle/somervellAndThomas/alarm.png", position:{col:4, row:16}, size:{width:3, height:5}},
+    {type:"text", style:{outline:"bubble"}, src:"Excuse me, Mr. Smith! How would you respond to the allegations that you were the one who set the library on fire and destroyed over 25,000 books??",position:{col:1, row:17}, size:{width:3, height:3}},
 ]}/> 
 
 At the beginning of 1901, a huge fire consumed the wooden Yesler Mansion that the library was operating out of. It left the library with nothing -- no books and no home.
@@ -34,17 +38,26 @@ Four days after the fire, news broke that Andrew Carnegie, who before had writte
 <LOCItem image="/loc/seattle/somervellAndThomas/seattleMap.png" linkOut="https://www.loc.gov/resource/g4284s.pm009770/?r=0.409,0.25,0.286,0.196,0" caption="" alt=""/>
 
 
-<ComicSection elements={[
-    {type:"image", src:"/placeholderThumbnail.png", position:{col:1, row:1}, size:{width:1, height:1}},
+<ComicSection cols={7} overlap={100} rowHeight="2rem" elements={[
+    {type:"text", style:{outline:"bubble"}, src:"But this doesn't look anything like the current Seattle Public Library.",position:{col:1, row:1}, size:{width:3, height:3}},
+    {type:"image", src:"/loc/seattle/somervellAndThomas/smith1.png", position:{col:4, row:1}, size:{width:2, height:2}},
+    {type:"text", style:{outline:"bubble"}, src:"Ours is more..",position:{col:6, row:2}, size:{width:2, height:2}},
+    {type:"image", src:"/loc/seattle/somervellAndThomas/smithTwo.png", position:{col:1, row:5}, size:{width:7, height:8}},
+    {type:"text", style:{outline:"bubble", fontSize: "1.3rem"}, src:"Geometric",position:{col:4, row:7}, size:{width:2, height:3}},
+    {type:"text", style:{outline:"box" , backgroundColor: "white", fontSize:"1rem"}, src:"Yeah, in 1998, Seattle voters voted in favor of the largest library bond initiative at the time, and funded almost $200 million in renovations for Seattle’s libraries. Of the eight Carnegie libraries built in Seattle, the Central Library is the only one that was demolished. The others, if not still operating as a library branch, are still standing.",position:{col:1, row:13}, size:{width:7, height:4}},
 ]}/> 
 
-After Carnegie’s first large donation, it seemed like a seal had broken. Carnegie also funded the building of the Ballard Library (which at time of creation was still a separate city from Seattle), West Seattle, Green Lake, and University branches. And then in 1911, Carnegie donated $70,000 more to fund the building of the Queen Anne Public Library and Columbia Branch which opened in 1915.
+After Carnegie’s first large donation, it seemed like a seal had broken. Carnegie also funded the building of the Ballard Library (which at time of creation was still a separate city from Seattle), West Seattle, Green Lake, and University branches. 
 
-Architect team W. Marbury Somervell and Harlan Thomas were hired to design both neighborhood branches. 
+And finally in 1911, Carnegie donated $70,000 more to fund the building of the last two Carnegie libraries: the Queen Anne Public Library and Columbia Branch which opened in 1915. Architect team W. Marbury Somervell and Harlan Thomas were hired to design both branches. 
 
-
-<ComicSection elements={[
-    {type:"image", src:"/placeholderThumbnail.png", position:{col:1, row:1}, size:{width:1, height:1}},
+<ComicSection cols={5} rowHeight="2rem" elements={[
+    {type:"text",position:{col:1, row:1}, size:{width:5, height:4}, style:{outline:"box" , backgroundColor: "white"}, src:"While the Queen Anne and Columbia City branch libraries were created by the same people at the same time, they have subtle differences that show off what style of architecture each one was born from."},
+    {type:"image", position:{col:1, row:5}, size:{width:5, height:8}, src:"/loc/seattle/somervellAndThomas/queenAnneDiagram.png"},
+    {type:"text",position:{col:3, row:3}, size:{width:3, height:8},style:{outline:"box" , backgroundColor: "white"}, src:"They both started from the same template of a Carnegie library: stairs leading up to a grand front door and many windows -- elevated and enlightened."},
+    {type:"text",position:{col:1, row:17}, size:{width:5, height:4}, style:{outline:"box" , backgroundColor: "white"}, src:"The Queen Anne one is “Tudor Revival”, which can be seen from the tall parapets, the placement of lamps on the inside guarding the main entrance, and the brickwork, which is “English bond”"},
+    {type:"image", position:{col:1, row:20}, size:{width:5, height:13}, src:"/loc/seattle/somervellAndThomas/columbiaDiagram.png",},
+    {type:"text",position:{col:1, row:32}, size:{width:5, height:3}, style:{outline:"box" , backgroundColor: "white"}, src:"The Columbia Branch on the other hand is “Georgian Revival”, which is typically very symmetrical and inspired by classical Greek and Roman Architecture. That’s why there are large blocks supporting the columns on each end, and the masonry has V’s in place of U’s."},
 ]}/> 
 
 {/* 
