--- a/src/app/content/seattle/architects/arai.mdx
+++ b/src/app/content/seattle/architects/arai.mdx
@@ -7,8 +7,8 @@ latlon: [47.5998061623727, -122.3132184]
 neighborhood: International District
 zoom: 15
 tags: ["architects", "built"]
-cameraImage: "/placeholderThumbnail.png"
-cardImage: "/placeholderThumbnail.png"
+cameraImage: "/loc/seattle/arai/temple.png"
+cardImage: "/loc/seattle/arai/gate.png"
 stampName:
 photoPrompt:
 blurb:
