--- a/src/app/content/seattle/architects/firestationNo18.mdx
+++ b/src/app/content/seattle/architects/firestationNo18.mdx
@@ -7,8 +7,8 @@ latlon: [47.66825789609244, -122.38310310394768]
 neighborhood: Ballard
 zoom: 15
 tags: ["built","architects"]
-cameraImage: "/placeholderThumbnail.png"
-cardImage: "/placeholderThumbnail.png"
+cameraImage: "/loc/seattle/firestationNo18/firehorse.png"
+cardImage: "/loc/seattle/firestationNo18/station.png"
 stampName:
 photoPrompt:
 blurb:
