--- a/src/app/content/seattle/architects/somervellAndThomas.mdx
+++ b/src/app/content/seattle/architects/somervellAndThomas.mdx
@@ -1,5 +1,5 @@
 ---
-title: Seattle's smallest library
+title: How a fire built Seattle's libraries
 locationTitle: Columbia Branch Library
 address: 4721 Rainier Ave S, Seattle, WA 98118
 location: ["Seattle"] 
@@ -7,10 +7,10 @@ latlon: [47.55992594007352, -122.28698055767136]
 neighborhood: Columbia City
 zoom: 15
 tags: ["architects", "built"]
-cameraImage: "/placeholderThumbnail.png"
-cardImage: "/placeholderThumbnail.png"
+cameraImage: "/loc/seattle/somervellAndThomas/seattleMap.png"
+cardImage: "/loc/seattle/somervellAndThomas/libraryFire.png"
 stampName:
-photoPrompt: "VVNTODO"
+photoPrompt: "What details about the building do you notice?"
 blurb: "VVNTODO"
 stickers: [{image: "/loc/seattle/somervellAndThomas/smith.png", linkOut: "https://www.loc.gov/resource/g4284s.pm009770/?r=0.546,0.369,0.08,0.055,0", title: "Drawing of Smith Tower from a birdseye view map."},{image: "/loc/seattle/somervellAndThomas/smith.png", linkOut: "https://www.loc.gov/resource/g4284s.pm009770/?r=0.727,0.286,0.166,0.113,0", title: "Columbia label from birdseye view map"}]
 ---
@@ -54,10 +54,10 @@ And finally in 1911, Carnegie donated $70,000 more to fund the building of the l
 <ComicSection cols={5} rowHeight="2rem" elements={[
     {type:"text",position:{col:1, row:1}, size:{width:5, height:4}, style:{outline:"box" , backgroundColor: "white"}, src:"While the Queen Anne and Columbia City branch libraries were created by the same people at the same time, they have subtle differences that show off what style of architecture each one was born from."},
     {type:"image", position:{col:1, row:5}, size:{width:5, height:8}, src:"/loc/seattle/somervellAndThomas/queenAnneDiagram.png"},
-    {type:"text",position:{col:3, row:3}, size:{width:3, height:8},style:{outline:"box" , backgroundColor: "white"}, src:"They both started from the same template of a Carnegie library: stairs leading up to a grand front door and many windows -- elevated and enlightened."},
-    {type:"text",position:{col:1, row:17}, size:{width:5, height:4}, style:{outline:"box" , backgroundColor: "white"}, src:"The Queen Anne one is “Tudor Revival”, which can be seen from the tall parapets, the placement of lamps on the inside guarding the main entrance, and the brickwork, which is “English bond”"},
+    {type:"text",position:{col:3, row:3}, size:{width:3, height:8},style:{outline:"box" , backgroundColor: "white"}, src:"They both started from the same template of a Carnegie library: stairs leading up to a grand front door and many windows - to represent how learning can elevate and enlighten people."},
+    {type:"text",position:{col:1, row:17}, size:{width:5, height:4}, style:{outline:"box" , backgroundColor: "white", fontSize: "1rem"}, src:"The Queen Anne one is “Tudor Revival”, which can be seen from the tall parapets, the placement of lamps on the inside guarding the main entrance, and the brickwork, which is “English bond”"},
     {type:"image", position:{col:1, row:20}, size:{width:5, height:13}, src:"/loc/seattle/somervellAndThomas/columbiaDiagram.png",},
-    {type:"text",position:{col:1, row:32}, size:{width:5, height:3}, style:{outline:"box" , backgroundColor: "white"}, src:"The Columbia Branch on the other hand is “Georgian Revival”, which is typically very symmetrical and inspired by classical Greek and Roman Architecture. That’s why there are large blocks supporting the columns on each end, and the masonry has V’s in place of U’s."},
+    {type:"text",position:{col:1, row:32}, size:{width:5, height:3}, style:{outline:"box" , backgroundColor: "white", fontSize: "1rem"}, src:"The Columbia Branch on the other hand is “Georgian Revival”, which is typically very symmetrical and inspired by classical Greek and Roman Architecture. That’s why there are large blocks supporting the columns on each end, and the masonry has V’s in place of U’s."},
 ]}/> 
 
 {/* 
