--- a/src/app/content/seattle/architects/mcAdoo.mdx
+++ b/src/app/content/seattle/architects/mcAdoo.mdx
@@ -38,11 +38,21 @@ Each pool had a different architectural style, and the Queen Anne Pool project w
 He was well known for his Northwest modern style, which uses floor to ceiling glass, flat roofs, and asymmetrical layouts.
 
 
-<ComicSection elements={[
-    {type:"image", src:"/placeholderThumbnail.png", position:{col:1, row:1}, size:{width:1, height:1}},
+<ComicSection rowHeight="2rem" cols={7} elements={[
+    {type:"text",position:{col:1, row:1}, size:{width:7, height:2}, style:{outline:"box" , backgroundColor: "white", fontSize:"1rem"}, src:"His work can be seen all around Seattle:"},
+    {type:"image", src:"/loc/seattle/mcAdoo/church.png", position:{col:1, row:3}, size:{width:5, height:7}},
+    {type:"text",position:{col:5, row:4}, size:{width:4, height:2}, style:{outline:"none" , backgroundColor: "white"}, src:"from renovation projects like the 1st African Methodist Church in Capitol Hill"}
+]}/> 
+<ComicSection rowHeight="2rem" cols={7} elements={[
+    {type:"image", src:"/loc/seattle/mcAdoo/library.png", position:{col:3, row:1}, size:{width:5, height:11}},
+    {type:"text",position:{col:1, row:3}, size:{width:3, height:3}, style:{outline:"none" , backgroundColor: "white"}, src:"to converting the Madrona firestation into its branch library"}
+]}/> 
+<ComicSection rowHeight="2rem" cols={7} elements={[
+    {type:"image", src:"/loc/seattle/mcAdoo/clinic.png", position:{col:1, row:2}, size:{width:7, height:8}},
+    {type:"text",position:{col:1, row:1}, size:{width:7, height:2}, style:{outline:"none" , backgroundColor: "white"}, src:"He was also hired to design original buildings for people around the city, including the medical clinic for Dr. Robert Joyner, which is still standing at 2041 East Madison Street."}
 ]}/> 
 
-<LOCItem image="/loc/seattle/mcAdoo/joyner.png" linkOut="https://www.loc.gov/resource/sn87093377/1950-04-12/ed-1/?sp=8&q=robert+joyner&r=-0.019,0.065,1.122,0.769,0" caption="" alt=""/>
+<LOCItem image="/loc/seattle/mcAdoo/joyner.png" linkOut="https://www.loc.gov/resource/sn87093377/1950-04-12/ed-1/?sp=8&q=robert+joyner&r=-0.019,0.065,1.122,0.769,0" caption="Snippet from the Northwest Enterprise, highlighting all the features of the new clinic, including a direct phone line to the pharmacy and an x-ray machine." alt=""/>
 
 The Queen Anne Pool was not an easy project. It was the last to be built of the seven Forward Thrust pools, and its first challenge was finding a location. The Forward Thrust pools were supposed to be built adjacent to local high schools so that they could be used for practice, but property values in Queen Anne were very high. A compromise was made, and it was decided that the pool should be built next to McClure Middle School instead.
 
@@ -50,11 +60,12 @@ Even after it was built, incidents delayed the pool - the humidity turned the ex
 
 The exterior of the pool was design to match the neighboring middle school, but McAdoo’s modernist touch can be best seen from the interior with its exposed brick, concrete, and wood. 
 
-McAdoo believed that as an architect, he could have an impact on creating fair housing. So while he created on grand structures, including even the Kennedy Center for the Performing Arts in Washington DC, he also designed low-cost houses like he “House of Merit” plan, which was a 2 bedroom, 1 bathroom house. This design was adopted for many houses in the Central District.
-
 <LOCItem image="/loc/seattle/mcAdoo/article.png" linkOut="https://www.loc.gov/resource/sn92051342/1947-03-08/ed-1/?sp=11&q=benjamin+mcadoo&r=-0.171,-0.054,1.084,0.743,0" caption="" alt=""/>
 
-<LOCItem image="/loc/seattle/mcAdoo/tips.png" linkOut="https://www.loc.gov/resource/sn92051342/1947-03-08/ed-1/?sp=11&q=benjamin+mcadoo&r=-0.171,-0.054,1.084,0.743,0" caption="" alt=""/>
+<LOCItem image="/loc/seattle/mcAdoo/tips.png" linkOut="https://www.loc.gov/resource/sn92051342/1947-03-08/ed-1/?sp=11&q=benjamin+mcadoo&r=-0.171,-0.054,1.084,0.743,0" caption="Article from the Hartford Chronicle, an African-American newspaper based in Connecticut, about what it takes to become a architect. McAdoo was highlighted at the end for his successful career." alt=""/>
+
+
+McAdoo believed that as an architect, he could have an impact on creating fair housing. So while he worked on grand structures, including even the Kennedy Center for the Performing Arts in Washington DC, he also designed low-cost houses like he “House of Merit” plan, which was a 2 bedroom, 1 bathroom house. This design was adopted for many houses in the Central District.
 
 {/* 
 Sticker template: 
