--- a/src/app/content/seattle/architects/mcAdoo.mdx
+++ b/src/app/content/seattle/architects/mcAdoo.mdx
@@ -1,5 +1,5 @@
 ---
-title:
+title: 
 locationTitle: Queen Anne Pool
 address: 1920 1st Ave W, Seattle, WA 98119
 location: ["Seattle"] 
@@ -15,22 +15,11 @@ blurb:
 stickers: [{}]
 ---
 
-In 1968, Seattle voters passed 7 of 12 propositions as a part of Forward Thrust, which aimed to improve Seattle to support the growth of population it expected. These initiatives helped create lots of things that are Seattle staples nowadays, including:
-
-the Seattle Aquarium, and
-the Kingdome, whose site now hosts the Seattle Seahawks and Seattle Sounders,
-
-It also passed $118 million in funding for parks and recreation in King County, which included the construction of seven new pools for Seattle:
-Medgar Evers Pool
-Capt. William R. Ballard
-Helene Madison
-Rainier Beach
-Meadowbrook
-Sealth, 
-and Queen Anne
+In 1968, Seattle voters passed 7 of 12 propositions as a part of Forward Thrust, which aimed to improve Seattle to support the growth of population it expected. These initiatives helped create lots of things that are Seattle staples nowadays, including the Seattle Aquarium and the Kingdome, whose site now hosts the Seattle Seahawks and Seattle Sounders.
 
 <ComicSection elements={[
-    {type:"image", src:"/placeholderThumbnail.png", position:{col:1, row:1}, size:{width:1, height:1}},
+    {type:"text",position:{col:1, row:1}, size:{width:7, height:2}, style:{outline:"box" , backgroundColor: "white", fontSize:"1rem"}, src:"It also passed $118 million in funding for parks and recreation in King County, which included the construction of seven new pools for Seattle:"},
+    {type:"image", src:"/loc/seattle/mcAdoo/poolMap.png", position:{col:1, row:2}, size:{width:3, height:7}},
 ]}/> 
 
 Each pool had a different architectural style, and the Queen Anne Pool project was granted to Benjamin F. McAdoo Jr, a prolific Washington architect who was also the first licensed Black architect in the state.
