--- a/src/app/content/seattle/architects/mcAdoo.mdx
+++ b/src/app/content/seattle/architects/mcAdoo.mdx
@@ -1,5 +1,5 @@
 ---
-title: 
+title: VVN TODO need title
 locationTitle: Queen Anne Pool
 address: 1920 1st Ave W, Seattle, WA 98119
 location: ["Seattle"] 
